tests/snapshots/generate_plan_tests__java_gradle_8.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "java"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install",
        "setup"
      ],
      "cmds": [
        "./gradlew clean build -x check -x test"
      ],
      "cacheDirectories": [
        "/root/.gradle"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "jdk21",
        "gradle"
      ],
      "nixOverlays": [],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "gradle -v && java $JAVA_OPTS -jar build/libs/*.jar"
  }
}
