tests/snapshots/generate_plan_tests__java_gradle_hello_world.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "Java"
  },
  "phases": [
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ]
    },
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "jdk"
        },
        {
          "name": "gradle"
        }
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "./gradlew build"
      ],
      "cacheDirectories": [
        ".gradle"
      ]
    }
  ],
  "startPhase": {
    "cmd": "java $JAVA_OPTS -jar  build/libs/*.jar"
  }
}
