tests/snapshots/generate_plan_tests__java_maven.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "Java"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "mvn -DoutputFile=target/mvn-dependency-list.log -B -DskipTests clean dependency:list install"
      ],
      "cacheDirectories": [
        ".m2/repository"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "jdk",
        "maven"
      ],
      "nixOverlays": [],
      "nixpacksArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "java -Dserver.port=$PORT $JAVA_OPTS -jar target/*jar"
  }
}
