tests/snapshots/generate_plan_tests__java_spring_boot.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "Java"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "./gradlew build"
      ],
      "cacheDirectories": [
        ".gradle"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "jdk11",
        "gradle_6"
      ],
      "nixOverlays": [],
      "nixpacksArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "java $JAVA_OPTS -jar -Dserver.port=$PORT build/libs/*.jar"
  }
}
